--- a/mesos.yml
+++ b/mesos.yml
@@ -3,8 +3,9 @@
   connection: local
   vars:
     ssh_key: mesos
-    mesos_num_masters: 3
-    mesos_num_workers: 3
+    inventory_local_destination: $PWD/inventory
+    mesos_num_masters: 1
+    mesos_num_workers: 10
     mesos_security_group_name: mesos
     mesos_node_prefix: mesos1
     mesos_template: Linux Ubuntu 14.04 LTS 64-bit 10G Disk (2014-10-28-3b8b26) 
