--- a/nginx.json
+++ b/nginx.json
@@ -1,16 +1,16 @@
 {
-    "id": "mlh", 
-    "container": {
-        "docker": {
-            "image": "nginx",
-            "network": "BRIDGE",
-            "portMappings": [
-                { "containerPort": 80, "hostPort": 80, "protocol": "tcp" }
-            ]
-        },
-        "type": "DOCKER"
-    },
-    "cpus": 0.5,
-    "mem": 512,
-    "instances": 1
+  "container": {
+    "type": "DOCKER",
+    "docker": {
+      "image": "nginx",
+      "network": "BRIDGE",
+      "portMappings": [
+        { "containerPort": 80, "hostPort": 0 }
+      ]
+    }
+  },
+  "id": "nginx",
+  "instances": 1,
+  "cpus": 0.5,
+  "mem": 128
 }
